<resources>
    <string name="app_name">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="enter_your_job_title">Enter Your Job Title</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="add">Add</string>
    <string name="enter_your_gender">Enter Your Gender</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="add_user">add user</string>
</resources>