<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:paddingTop="60dp"
        tools:context="com.ahmedkenawy.user.ui.add.AddUserFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_your_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/enter_your_age">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_age"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_job_title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/enter_your_job_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_job_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_gender"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/enter_your_gender">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingVertical="15dp"
            android:text="@string/add" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>