<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_user_header"
    android:orientation="horizontal"
    android:paddingHorizontal="5dp"
    android:paddingVertical="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="2dp"
        android:layout_height="25dp"
        android:layout_marginHorizontal="5dp"
        android:background="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/age"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="2dp"
        android:layout_height="25dp"
        android:layout_marginHorizontal="5dp"
        android:background="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/job_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="2dp"
        android:layout_height="25dp"
        android:layout_marginHorizontal="5dp"
        android:background="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>